Google Map Changes

--- a/JobHunterApp/Views/Listings/Index.cshtml
+++ b/JobHunterApp/Views/Listings/Index.cshtml
@@ -46,6 +46,10 @@
             @Html.ActionLink("Delete", "Delete", new { id=item.ListingID })
         </td>
     </tr>
-}
 
+}
 </table>
+<div id="map">My map will go here</div>
+<div id="map">style="width:400px;height:400px" </div>
+<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+
