google map changes 2

--- a/JobHunterApp/Views/Listings/Index.cshtml
+++ b/JobHunterApp/Views/Listings/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<JobHunterApp.Models.Listing>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Search Results";
 }
 
-<h2>Index</h2>
+<h2>Search Results</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -52,4 +52,8 @@
 <div id="map">My map will go here</div>
 <div id="map">style="width:400px;height:400px" </div>
 <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+<div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3269.4611940474756!2d-81.88984884917784!3d34.9701109761528!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88570b188a1bd345%3A0xbd782733013d02cd!2sChick-fil-A!5e0!3m2!1sen!2sus!4v1510790118259" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
+
 
