--- a/JobHunterApp/Views/Listings/Index.cshtml
+++ b/JobHunterApp/Views/Listings/Index.cshtml
@@ -13,6 +13,7 @@
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.LocationID)
+            
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Location)
@@ -23,7 +24,11 @@
         <th>
             @Html.DisplayNameFor(model => model.JobType.TypeName)
         </th>
-        <th></th>
+        <th>
+            @Html.DisplayText("Google Map Locale")
+            <!---@Html.DisplayNameFor(model => model.JobType.TypeID)-->
+        </th>
+        
     </tr>
 
 @foreach (var item in Model) {
@@ -48,6 +53,7 @@
     </tr>
 
 }
+    b
 </table>
 <div id="map">My map will go here</div>
 <div id="map">style="width:400px;height:400px" </div>
